--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ requests==2.28.1
 ftx==1.2.0
 keras==2.9.0
 matplotlib==3.5.2
-
+datetime>=3.9.0
 numpy==1.21.6
-
+ta==0.10.1
+math>=3.9.0
 python-binance==1.0.16
-
+smtplib>=3.9.0
 tensorflow-cpu==2.9.0
 
